2013-02-18
* prevent adding duplicates to report tarball
* merge generatenameshtml.py and generateuniquehtml.py
* fix sorting of scans
* add some tags from leafscans to unpackreports
* ignore files which don't have ranking results in generateuniquehtml.py and
rankimages.py

2013-02-17
* ignore statically linked files in findlibs.py

2013-02-16
* determine size for gzip files, preventing false positives and scanning time
* fix aggregate jars: use right index, prevent unnecessary storing of a ton of
data
* start moving 'tags' to unpackreports instead of the leafreports. This will
require some tweaks to how the leafscans are run as well.

2013-02-15
* optimize RPM unpacking: use size from RPM header
* don't read file in its entirety into memory in ranking, but use seek() and
read() instead
* remove dependency on fssearch in RPM unpacking
* remove unused method in kernelanalysis.py

2013-02-14
* use caching databases for Java fields and class names. This saves a ton of
time (especially fields)
* copy results more efficiently, which was a problem when there were lots of
result files

2013-02-13
* prevent some scans for running on ELF files
* remove false positives from LRZIP unpacking

2013-02-12
* fix ELF tagging in prerun.py. This prevents LZMA unpacking from being called
needlessly.
* write results of leafscans to disk earlier and don't keep them in memory
until the very late end. Rewrite everything (except the GUI) that uses the old
notation. This saves a significant chunk of memory (90% in some of my test
cases) which makes it less likely swap is used, which just kills performance.

2013-02-10
* don't store unneeded data in scans that don't need it

2013-02-07
* merge caching databases, decluttering configuration a bit
* add conversion script to merge databases

2013-02-06
* if available use precomputed scores

2013-02-05
* store variable names more efficiently

2013-02-04
* cleanup for LRZIP unpacking
* more sanity checks for ext2/3/4 unpacking

2013-01-27