@@ -62,7 +62,6 @@ misc:
 * replay script to unpack firmware based on only the pickle with unpacking data
 * expand "debug"
 * add support for ignoring some file types/extensions completely
-* remove dependency on PyXML since it will be gone in Fedora 19 https://fedoraproject.org/wiki/Features/RemovePyXML
 
 BOTTLENECKS:
 1. ELF tagging is sometimes incorrect, so LZMA unpacker tries to extract LZMA files in vain from these ELF files, which costs a lot of time.
